--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header>
         <div class="logo">
             <p>MERCEDES</p>
+            <img src="./Images/Mustang GT - Sarel van Staden on Fstoppers.jpg" alt="Mercedes logo">
         </div>
             <ul class="nav">
                 <li class="nav_link"><a href="#">Home</a></li>
@@ -32,8 +33,8 @@
                 <img class="CarPic" src="./Images/Mercedes-Maybach GLS.png" alt="Picture of Mercedes-Maybach GLS">
             </div>
             <div class="right_content">
-                <p class="center_p">How To Participate</p>
-                <h5 id="demo" class="giveaway">Giveaway Ends on Wednesday, 4 March 2024, 11:00am</h5>
+                <p class="center_p">Giveaway details</p>
+                <h5 class="giveaway">Giveaway Ends on Wednesday, 4 March 2024, 11:00am</h5>
             <div>
                 <p class="center_p">How To Participate</p>
                 <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit ratione, culpa omnis quam laboriosam
@@ -47,19 +48,19 @@
         <div class="bottom_content">
             <div class="counter deadline expired-message">
                 <div class="deadline-format counter_body1">
-                        <h4 class="days counter_body2">34</h4>
+                        <h4 class="days counter_body2">00</h4>
                         <span class="counter_body3">DAYS</span>
                 </div>
                 <div class="deadline-format counter_body1">
-                        <h4 class="hours counter_body2">34</h4>
+                        <h4 class="hours counter_body2">00</h4>
                         <span class="counter_body3">HOURS</span>
                 </div>
                 <div class="deadline-format counter_body1">
-                        <h4 class="minutes counter_body2">34</h4>
+                        <h4 class="minutes counter_body2">00</h4>
                         <span class="counter_body3">MINS</span>
                 </div>
                 <div class="deadline-format counter_body1">
-                        <h4 class="seconds counter_body2">34</h4>
+                        <h4 class="seconds counter_body2">00</h4>
                         <span class="counter_body3">SECS</span>
                 </div>
             </div>
